src/content/docs/v0.9.2/nxuskit/index.md
---
title: nxusKit SDK
description: A type-safe, multi-language SDK for LLM providers, rule engines,
  constraint solvers, and decision tables.
slug: v0.9.2/nxuskit
---

nxusKit is a unified, type-safe SDK for calling LLM providers (Claude, OpenAI, Ollama, and more),
CLIPS rule engines, Z3 constraint solvers, Bayesian networks, and ZEN decision tables — from Rust, Go, Python, and the C ABI.

## Start Here

Install the SDK, configure credentials, and run your first request:

- [Installation](/v0.9.2/nxuskit/getting-started/installation/)
- [First Call](/v0.9.2/nxuskit/getting-started/first-call/)
- [Authentication](/v0.9.2/nxuskit/getting-started/authentication/)

## Browse by Task

- **Build an integration** — Start with [installation](/v0.9.2/nxuskit/getting-started/installation/), then use the [provider model](/v0.9.2/nxuskit/concepts/provider-model/) to choose the right backend.
- **Explore working code** — Browse [examples](/v0.9.2/nxuskit/examples/) for reusable patterns, local model setup, solver workflows, and complete applications.
- **Author rules** — Use the [CLIPS rule authoring guide](/v0.9.2/nxuskit/guides/clips-rule-authoring/) and the [CLIPS session API](/v0.9.2/nxuskit/reference/api-reference/#clips-session-api).
- **Look up contracts** — Use the [API reference](/v0.9.2/nxuskit/reference/api/), [CLI reference](/v0.9.2/nxuskit/reference/cli-reference/), and [provider references](/v0.9.2/nxuskit/reference/providers/cloud-llms/).
- **Manage editions** — Review [feature tiers](/v0.9.2/nxuskit/concepts/tier-system/) and [license activation](/v0.9.2/nxuskit/concepts/licensing/).
