src/content/docs/v1.0.5/nxuskit/index.md
---
title: nxusKit SDK
description: Install and build with nxusKit across LLM providers, CLIPS, Bayesian networks, Solver/Z3, ZEN, Python, C ABI, and CLI/Bash workflows.
slug: v1.0.5/nxuskit
---

nxusKit is a unified, type-safe SDK for calling LLM providers (Claude, OpenAI, Ollama, and more),
CLIPS rule engines, Z3 constraint solvers, Bayesian networks, and ZEN decision tables — from Rust, Go, Python, and the C ABI.

## Start Here

Install the SDK, configure credentials, and run your first request:

- [Installation](/v1.0.5/nxuskit/getting-started/installation/)
- [First Call](/v1.0.5/nxuskit/getting-started/first-call/)
- [Authentication](/v1.0.5/nxuskit/getting-started/authentication/)

## High-Value References

- [CLI input format reference](/v1.0.5/nxuskit/reference/cli-reference/) - JSON schemas and local loopback examples for `nxuskit-cli`.
- [Local LLM providers](/v1.0.5/nxuskit/reference/providers/local-llms/) - Ollama, LM Studio, llama.cpp, and mistral.rs setup.
- [Licensing](/v1.0.5/nxuskit/concepts/licensing/) - Pro activation, entitlement checks, and offline-first license validation.
- [Changelog](/v1.0.5/nxuskit/reference/changelog/) - current v1.x packaging, docs, Python, and CLI release notes.
- [Examples catalog](/v1.0.5/nxuskit/examples/) - runnable patterns and integrations across supported languages and CLI/Bash.

## Browse by Task

- **Build an integration** — Start with [installation](/v1.0.5/nxuskit/getting-started/installation/), then use the [provider model](/v1.0.5/nxuskit/concepts/provider-model/) to choose the right backend.
- **Explore working code** — Browse [examples](/v1.0.5/nxuskit/examples/) for reusable patterns, local model setup, solver workflows, and complete applications.
- **Author rules** — Use the [CLIPS rule authoring guide](/v1.0.5/nxuskit/guides/clips-rule-authoring/) and the [CLIPS session API](/v1.0.5/nxuskit/reference/api-reference/#clips-session-api).
- **Look up contracts** — Use the [API reference](/v1.0.5/nxuskit/reference/api/), [C ABI reference](/v1.0.5/nxuskit/reference/api-reference/), [CLI reference](/v1.0.5/nxuskit/reference/cli-reference/), and [provider references](/v1.0.5/nxuskit/reference/providers/cloud-llms/).
- **Manage editions** — Review [feature tiers](/v1.0.5/nxuskit/concepts/tier-system/) and [license activation](/v1.0.5/nxuskit/concepts/licensing/).
- **Use Codex workflows** — Install [nxusKit Celerat](/codex-plugins/nxuskit/) and browse [task recipes](/codex-plugins/nxuskit/task-recipes/) for Codex-ready implementation prompts.
